--- a/style.css
+++ b/style.css
@@ -462,7 +462,7 @@ header p {
   border-bottom: 1px solid #444;
 }
 
-/* Center title while buttons stay left */
+/*  while buttons stay left */
 .summary-title {
   margin-left: auto;
   margin-right: auto;
@@ -484,7 +484,7 @@ header p {
   color: #fff;
 
   position: relative;
-  left: -70px;   /* ← adjust this value to taste */
+  left: -65px;   /* ← adjust this value to taste */
 }
 
 
