--- a/style.css
+++ b/style.css
@@ -1005,17 +1005,10 @@ header {
     background: #e74c3c;
     box-shadow: 0 0 14px rgba(231,76,60,0.7);
   }
-  @media (max-width: 900px) {
-    
-  .bottom-summary.collapsed {
-  height: 60px;
+ #bottomSummary.collapsed {
+  height: 40px;
 }
 
-
-  .bottom-summary.collapsed {
-    height: 60px !important;
-  }
-}
   
 
 }
