--- a/style.css
+++ b/style.css
@@ -1078,3 +1078,19 @@ header {
   #completeStopsBtnMobile { order: 4; }
 
 }
+
+
+
+
+
+
+
+
+#completeStopsBtnMobile {
+  position: fixed !important;
+  bottom: 80px !important;
+  right: 20px !important;
+  z-index: 999999 !important;
+  background: red !important;
+}
+
